# CppArrai18n

./: .gitignore  Arrai18n.hpp  CMakeLists.txt  README.MD  example.cpp  main.cpp
example/: CMakeLists.txt  example.cpp
include/CppArrai18n/: Arrai18n.hpp  Arrai18n_def.hpp
src/: Arrai18n.cpp
